--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                 sh "terraform plan"
             }
         }
-          stage ('terraform plan'){
+          stage ('terraform apply'){
             steps{
                 sh "terraform apply --auto-approve"
             }
