--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,19 +8,9 @@ pipeline {
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY') // Use Jenkins credentials if applicable
     }
     stages {
-        stage ('Terraform Apply') {
-            steps {
-                sh 'terraform init'
-            }
-        }
-        stage ('terraform plan'){
-            steps{
-                sh "terraform plan"
-            }
-        }
           stage ('terraform apply'){
             steps{
-                sh "terraform apply --auto-approve"
+                sh "terraform destroy --auto-approve"
             }
         }
     }
